	  sim/ucsim/gui.src/serio.src/Makefile.in,
	  sim/ucsim/gui.src/obsolete/portmon.src/Makefile.in,
	  sim/ucsim/sim.src/Makefile.in, sim/ucsim/configure.in,
	  sim/ucsim/hc08.src/Makefile.in, sim/ucsim/s51.src/Makefile.in,
	  sim/ucsim/avr.src/Makefile.in, sdas/as8051/Makefile.in,
	  sdas/asz80/Makefile.in, sdas/linksrc/Makefile.in,
	  sim/ucsim/main_in.mk: portable -Wall

2010-03-15 Borut Razem <borut.razem AT siol.net>

	* device/lib/*.c: sdcc library license changed to GPL+LE

2010-03-13 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: removed lib/src/z80/*.c from the package
	* src/z80/gen.c: fixed warning: suggest parentheses around assignment
	  used as truth value
	* sdas/asxxsrc/sdas.c, sdas/linksrc/sdld.c:
	  fixed warning: implicit declaration of function 'tolower'
	* sdas/asxxsrc/asmain.c: fixed warning: variable not initialized
	* device/include/limits.h, device/include/stdint.h,
	  device/include/float.h, device/include/typeof.h,
	  device/include/stddef.h, device/include/sdcc-lib.h,
	  device/include/stdlib.h, device/include/stdio.h,
	  device/include/math.h, device/include/asm/default/features.h,
	  device/include/assert.h, device/include/setjmp.h,
	  device/include/stdbool.h, device/include/ctype.h,
	  device/include/stdarg.h, device/include/errno.h:
	  sdcc library license changed to GPL+LE

2009-03-11 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f616.h,
	  device/include/pic/pic16hv616.h,
	  device/lib/pic/libdev/devices.txt,
	  device/lib/pic/libdev/pic16f616.c,
	  device/lib/pic/libdev/pic16hv616.c:
	  add support for 16f616 and 16hv616 devices

2010-03-09 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/gbz80/Makefile.in,
	  device/lib/gbz80/printf.c:
	  Made gbz80 port use the generic printf routine family.

2010-03-07 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c,
	  support/regression/tests/float_single.c:
	  gbz80 port regression test fixes.

2010-03-06 Borut Razem <borut.razem AT siol.net>
